manifests/apps/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: nextcloud
spec:
  selector:
    app: nextcloud
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
